[package]
name = "tiny_pong"
version = "0.2.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rodio = "0.19.0"
ruscii = "0.4.0"
anyhow = "1.0"
cargo_metadata = "0.18"
clap = { version = "4.5", features = ["derive", "cargo"] }
clap-help = "1.3"
cli-log = "2.1"
crokey = "1.1"
directories-next = "2.0.0"
gix = { version = "0.67", default-features = false, features = ["index", "excludes", "parallel"] }
glob = "0.31"
lazy-regex = "3.3"
notify = "7.0"
rustc-hash = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.31"
unicode-width = "0.2"
vte = "0.8"
tomr = "0.4"
